# dasp

./: .envrc  .gitignore  Cargo.toml  Pipfile  README.md  flake.nix  test.lp  test.py  treefmt.toml
af-generator/: Cargo.toml  README.md
af-generator/src/: args.rs  main.rs  types.rs
cli/: Cargo.toml
cli-iccma/: Cargo.toml
cli-iccma/src/: main.rs
cli-iccma/src/args/: mod.rs  path_or_stdin.rs
cli/benches/: af_benchmark.rs
cli/src/: args.rs  context.rs  error.rs  main.rs  path_or_stdin.rs
cli/src/framework/: mod.rs
cli/src/framework/af/: mod.rs
cli/src/framework/af/parser/: apx.rs  mod.rs  tgfm.rs
lib/: Cargo.toml
lib/src/: error.rs  lib.rs  semantics.rs  tests.rs
lib/src/argumentation_framework/: clingo.rs  mod.rs  symbols.rs  tests.rs
lib/src/argumentation_framework/parser/: apx.rs  apxm.rs  mod.rs  tgf.rs  tgfm.rs
lib/src/argumentation_framework/semantics/: admissible.dl  complete.dl  ground.dl  mod.rs  stable.dl
lib/src/framework/: iter_guard.rs  mod.rs
lib/src/framework/af/: mod.rs  symbols.rs
lib/src/framework/af/parser/: mod.rs  tgf.rs
lib/src/framework/af/semantics/: mod.rs
