[package]
name = "af-generator"
version = "0.1.0"
edition = "2021"

[package.metadata.nix]
build = true
app = true

[dependencies]
clap = { version = "4.0.29", features = ["derive", "wrap_help"] }
lazy_static = "1.4.0"
log = "0.4.19"
pretty_env_logger = "0.5.0"
rand = { version = "0.8.5", features = ["small_rng"] }
