[package]
name = "cli-iccma"
version = "0.1.0"
edition = "2021"

[package.metadata.nix]
build = true
app = true

[dependencies]
clap = { version = "4.0.11", features = ["derive", "cargo"] }
lib = { path = "../lib" }
fallible-iterator = "0.2.0"
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"

[dev-dependencies]
assert_cmd = { version = "2.0.5", features = ["color-auto"] }
criterion = "0.4.0"
lzma-rs = "0.2.0"
pretty_assertions = "1.3.0"
rexpect = "0.5.0"
tempfile = "3.3.0"
