[package]
name = "cli"
authors = ["Malte Tammena"]
version = "0.0.0"
edition = "2021"

[package.metadata.nix]
build = true
app = true

[dependencies]
clap = { version = "4.0.11", features = ["derive"] }
lib = { path = "../lib" }
fallible-iterator = "0.2.0"
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
thiserror = "1.0.39"
humantime = "2.1.0"

[dev-dependencies]
assert_cmd = "2.0.11"
criterion = "0.5.1"
lzma-rs = "0.3.0"
tempfile = "3.6.0"
